--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
 <head>
   <meta charset="utf-8">
   <title>Ritam's Personal Site</title>
+  <link rel="stylesheet" href="css/styles.css">
+
 </head>
 
 <body>
   <table>
     <tr>
-      <td><img src="Ritam Circle img.png" alt="Ritam Pramanik's profile picture"></td>
+      <td><img src="Ritam Circle img.png" alt="Ritam Pramanik's profile picture" vspace="10" hspace="14"/></td>
       <td><h1>Ritam Pramanik</h1>
       <p>
-        <em>A <strong>Java</strong> Developer</em>
+        <em> A <strong>Java</strong> Developer</em>
       </p>
       <p>
         I am currently pursuing my Computer Science Engineering Degree
@@ -32,6 +34,8 @@
     <li>Bachelor of Technology from Meghnad Saha Institute of Technology</li>
   </ul>
 
+  <hr>
+
   <h3>Languages</h3>
   <table>
     <tr>
@@ -49,6 +53,8 @@
   </table>
 
   <a href="Contact Details.html "><h4>Contact Me</h4></a>
+
+  <hr>
 
   <h3>Skills</h3>
 
@@ -90,6 +96,8 @@
       </tr>
 
     </table>
+
+  <hr>
 
     <h3>My Hobbies</h3>
     <ol>
