--- a/Contact Details.html
+++ b/Contact Details.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>Contact Me</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-  <h2>Ritam's Contact Details</h2>
+  <h1>Ritam's Contact Details</h1>
   <table>
     <tr>
       <td>Phone Number-</td>
@@ -26,6 +27,7 @@
       <td><a href="https://www.linkedin.com/in/ritam-pramanik-319a231b6/">Ritam Pramanik</a></td>
     </tr>
   </table>
+  <hr>
 
 </body>
 
